<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aplicacion</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="seleccionar">Seleccione archivo:</string>
    <string name="buscar">Buscar</string>
    <string name="resultado">Aplicacion creada por Cristina y Adrián con finalidad estudiantil.</string>
    <string name="rutaDelArchivo">Ruta del archivo</string>
    <string name="Descomprimir">Descomprimir</string>
    <string name="Comprimir">Comprimir</string>
    <string name="Abrir">Abrir</string>
    <string name="Huffman">Huffman</string>
    <string name="LZW">LZW</string>
    <string name="Propio">Propio</string>

</resources>
